test/library/packages/Crypto/saru/hashing/hash2.good
hash2.chpl:1: In function 'main':
hash2.chpl:4: error: unresolved enumerated type symbol or call 'type Digest.SHA1024'
hash2.chpl:4: note: because no functions named SHA1024 found in scope
